Fixed FindAndMoveMessagebox logic to be dynamic based on window size. Added memory protection logic Added BeginInvokes to all message box calls

--- a/Dual ISO Processor/Dual ISO Processor/Dual ISO Processor.csproj
+++ b/Dual ISO Processor/Dual ISO Processor/Dual ISO Processor.csproj
@@ -28,7 +28,7 @@
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <AutorunEnabled>true</AutorunEnabled>
-    <ApplicationRevision>9</ApplicationRevision>
+    <ApplicationRevision>11</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -79,6 +79,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>ManagedWinAPI\ManagedWinapi.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
